# GLDemo

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  SConstruct  TODO.md  vcpkg.json
src/: Camera.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  Mesh.cpp  Mesh.hpp  Node.cpp  Node.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Utils.hpp  Vector.cpp  Vector.hpp  main.cpp
src/controllers/: BaseController.hpp  FPSController.cpp  FPSController.hpp  FollowController.cpp  FollowController.hpp
src/editor/: Editor.cpp  Editor.hpp  main_editor.cpp
src/editor/models/: sphere.gltf
src/engine/application/: Application.cpp  Application.hpp
src/engine/controllers/: BaseController.hpp  FPSController.cpp  FPSController.hpp  FollowController.hpp
src/engine/math/: Quaternion.cpp  Quaternion.hpp  Transform.cpp  Transform.hpp  Vector.hpp
src/engine/objects/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  LightSource.cpp  LightSource.hpp  Node.cpp  Node.hpp  RenderedObject.hpp
src/engine/resources/: Model.cpp  Model.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Skybox.cpp  Skybox.hpp  Texture.hpp
src/engine/scene/: Prefab.hpp  Scene.hpp
src/engine/utilities/: Input.cpp  Input.hpp  Utils.hpp
src/game/: Cube.cpp  Cube.hpp  Globals.hpp  LightSource.hpp  Pyramid.cpp  Pyramid.hpp  SpaceDemo.hpp  main_game.cpp
src/game/models/: cube.json  cube_flat.json  cube_smooth.json  fighter.gltf  pyramid.json  pyramid_flat.json  pyramid_smooth.json  suzanne.gltf  test.gltf
src/game/shaders/: default.frag  default.vert  light_source.frag  light_source.vert
src/math/: Quaternion.cpp  Quaternion.hpp  Transform.cpp  Transform.hpp  Utils.hpp  Vector.hpp
src/models/: pyramid.json
src/objects/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  LightSource.cpp  LightSource.hpp  Node.cpp  Node.hpp  RenderedObject.hpp
src/resources/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.hpp
src/scene/: Prefab.hpp  Scene.hpp
src/shaders/: fragment.glsl  vertex.glsl
src/utilities/: Input.cpp  Input.hpp  Utils.hpp  Vector.cpp  Vector.hpp
tests/: README.md  test_node.cpp  test_quaternion.cpp  test_resource_manager.cpp  test_transform.cpp  test_vector.cpp
